add Donation resource
