# src/dto/request/donation-product_request.go
@@ -1,0 +1,6 @@
+package request
+
+type DonationProductRequest struct {
+	OngId    uint64           `json:"ong_id" validate:"required"`
+	Products []ProductRequest `json:"products" validate:"required"`
+}
