# src/dto/response/product_response.go
@@ -1,0 +1,7 @@
+package response
+
+type ProductResponse struct {
+	Unit     float32 `json:"unit"`
+	Quantity int     `json:"quantity"`
+	Name     string  `json:"name"`
+}
